--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,6 @@
     "airbnb",
     "airbnb/hooks",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
-    "prettier/react",
-    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "plugins": ["@typescript-eslint", "react", "prettier"],
@@ -20,6 +17,7 @@
   },
   "rules": {
     "import/no-unresolved": 0,
+    "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, {
       "extensions": [
         ".ts",
