fix warnings in template

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,13 @@
       }
     ],
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"],
+    "global-require": "off",
+    "react/no-unstable-nested-components": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "react/no-unescaped-entities": "off",
+    "import/prefer-default-export": "off",
+    "react/destructuring-assignment": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/extensions": ["error", "never"],
     "react/prop-types": 0,
     "no-shadow": "off",
