--- a/package.json
+++ b/package.json
@@ -57,8 +57,5 @@
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
-  "private": true,
-  "lint-staged": {
-    "*.{ts,tsx}": "eslint --cache --fix"
-  }
+  "private": true
 }
